# GPStk_south

./: CMakeLists.txt  tmp.txt
tests/Multi-Gnss/spp_test/: CMakeLists.txt  getIdealStation.sh  getMGEXData.sh  log.sh  plotModel.sh  plotSPPRes.sh  r3Read.cpp  r3Read2.cpp  satWatcher.cpp  spp.cpp  statistics.sh  whyTest.cpp
tests/Multi-Gnss/spp_test/ObsData/: abmf0050.16f  anmg0050.16p  brst.txt  brst0050.16g  brst0050.16n  brun0050.16p  brux.txt  cebr0050.16h  cod18782.ssc  cof18782.ssc  djig.txt  emr18782.ssc  esa18782.ssc  getNav.sh  getObs.sh  gfz18782.ssc  igs16P18782.ssc  jpl18782.ssc  metg015.txt  mit18782.ssc.Z  nklg.txt  sta.g  sta.l  sta_gal_info  tlse.txt  tlsg0050.16p  tmp.sta  tmp.txt  tmp2.txt  url.txt  wuh20050.16p
tests/Multi-Gnss/spp_test/ObsData/nav/: metg0010.16l  metg0020.16l  metg0030.16l  metg0040.16l  metg0050.16l  metg0060.16l  metg0070.16l  metg0080.16l  metg0090.16l  metg0100.16l
tests/Multi-Gnss/spp_test/ObsData/nav/g/: abmf0050.16g  areg0050.16g  brux0050.16g  cas10050.16g  cebr0050.16g  (+58 more)
tests/Multi-Gnss/spp_test/ObsData/obs/: brst0050.16o.Z  brux0050.16o.Z  koug0050.16o  koug0050.16o.Z  m0se0050.16o.Z  myva0050.16o.Z  nico0050.16o.Z  ohi30050.16o.Z  reun0050.16o.Z  roap0050.16o.Z  thtg0050.16o.Z  yar20050.16o.Z  zimj0050.16o.Z
tests/Multi-Gnss/spp_test/ResultData/: brst_GLO9.model  metg001.txt  metg002.txt  metg003.txt  metg004.txt  metg005.txt  metg006.txt  metg007.txt  metg008.txt  metg009.txt  metg010.txt  result_C1.pos  result_C5.txt  result_P2.pos  result_P2.txt  result_P2_m.pos  rinexid.tmp  sta.info  tmp1.txt  tmp_good.txt
(+241 files in other folders)
